--- a/map_test/tegola-snt.html
+++ b/map_test/tegola-snt.html
@@ -44,7 +44,7 @@
   <label><input type="checkbox" id="toggle-roads" checked> Roads</label><br>
   <label><input type="checkbox" id="toggle-parcels" checked> Parcels</label><br>
   <label><input type="checkbox" id="toggle-provinces" checked> Provinces</label><br>
-  <label><input type="checkbox" id="toggle-landvaluesubzone" checked> Provinces</label>
+  <label><input type="checkbox" id="toggle-landvaluesubzone" checked> LandValuePoint</label>
 </div>
 <div id="zoom-level">Zoom: --</div>
 
