--- a/map_test/tegola-vientiane.html
+++ b/map_test/tegola-vientiane.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Maplibre Tegola</title>
+  <title>Maplibre Vientiane</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <script src="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js"></script>
   <link href="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css" rel="stylesheet" />
@@ -41,10 +41,11 @@
 
 <div id="map"></div>
 <div id="controls">
+  <label><input type="checkbox" id="toggle-provinces" checked> Provinces</label><br>
+  <label><input type="checkbox" id="toggle-districts" checked> Districts</label><br>
   <label><input type="checkbox" id="toggle-roads" checked> Roads</label><br>
   <label><input type="checkbox" id="toggle-parcels" checked> Parcels</label><br>
-  <label><input type="checkbox" id="toggle-provinces" checked> Provinces</label><br>
-  <label><input type="checkbox" id="toggle-landvaluesubzone" checked> LandValuePoint</label>
+  <label><input type="checkbox" id="toggle-landvaluesubzone" checked> Value Point</label>
 </div>
 <div id="zoom-level">Zoom: --</div>
 
@@ -92,7 +93,20 @@ const map = new maplibregl.Map({
 	  },
 	  minzoom: 0,
 	  maxzoom: 24
-	},	  
+	},	 
+	{
+	  id: 'districts',
+	  type: 'fill',
+	  source: 'tegola',
+	  'source-layer': 'districts',
+	  paint: {
+		'fill-color': '#05f7c7',
+		'fill-outline-color': '#8b6bed',
+		'fill-opacity': 0.5
+	  },
+	  minzoom: 0,
+	  maxzoom: 24
+	},	 	
       {
         id: 'roads',
         type: 'line',
@@ -148,6 +162,10 @@ document.getElementById('toggle-parcels').addEventListener('change', function() 
 
 document.getElementById('toggle-provinces').addEventListener('change', function() {
 map.setLayoutProperty('provinces', 'visibility', this.checked ? 'visible' : 'none');
+});
+
+document.getElementById('toggle-districts').addEventListener('change', function() {
+map.setLayoutProperty('districts', 'visibility', this.checked ? 'visible' : 'none');
 });
 
 document.getElementById('toggle-landvaluesubzone').addEventListener('change', function() {
