--- a/map_test/tegola-keangnam.html
+++ b/map_test/tegola-keangnam.html
@@ -144,7 +144,7 @@ document.getElementById('toggle-intervals').addEventListener('change', function(
 
 document.getElementById('toggle-buildings').addEventListener('change', function() {
   const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('buildings', 'visibility', visibility);
+  map.setLayoutProperty('kn_buildings', 'visibility', visibility);
 });
 
 document.getElementById('toggle-stations').addEventListener('change', function() {
