--- a/map_test/vientiane.html
+++ b/map_test/vientiane.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Maplibre Keangnam</title>
+  <title>Maplibre Vientiane</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <script src="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js"></script>
   <link href="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css" rel="stylesheet" />
@@ -41,11 +41,11 @@
 
 <div id="map"></div>
 <div id="controls">
-
-  <label><input type="checkbox" id="toggle-intervals" checked> Roads</label><br>
-  <label><input type="checkbox" id="toggle-buildings" checked> Buildings</label><br>
-  <label><input type="checkbox" id="toggle-stations" checked> Stations</label><br>
-  <label><input type="checkbox" id="toggle-entrances" checked> Entrances</label>
+  <label><input type="checkbox" id="toggle-provinces" checked> Provinces</label><br>
+  <label><input type="checkbox" id="toggle-districts" checked> Districts</label><br>
+  <label><input type="checkbox" id="toggle-roads" checked> Roads</label><br>
+  <label><input type="checkbox" id="toggle-parcels" checked> Parcels</label><br>
+  <label><input type="checkbox" id="toggle-landvaluesubzone" checked> Value Point</label>
 </div>
 <div id="zoom-level">Zoom: --</div>
 
@@ -81,46 +81,59 @@ const map = new maplibregl.Map({
         minzoom: 0,
         maxzoom: 24
       },
+	{
+	  id: 'provinces',
+	  type: 'fill',
+	  source: 'tegola',
+	  'source-layer': 'provinces',
+	  paint: {
+		'fill-color': '#faf20a',
+		'fill-outline-color': '#666666',
+		'fill-opacity': 0.7
+	  },
+	  minzoom: 0,
+	  maxzoom: 24
+	},	 
+	{
+	  id: 'districts',
+	  type: 'fill',
+	  source: 'tegola',
+	  'source-layer': 'districts',
+	  paint: {
+		'fill-color': '#05f7c7',
+		'fill-outline-color': '#8b6bed',
+		'fill-opacity': 0.3
+	  },
+	  minzoom: 0,
+	  maxzoom: 24
+	},	 	
       {
-        id: 'kn_intervals',
+        id: 'roads',
         type: 'line',
         source: 'tegola',
-        'source-layer': 'kn_intervals',
+        'source-layer': 'roads',
         paint: {
-          'line-color': '#ff0000',
+          'line-color': '#8607ed',
           'line-width': 2
         }
       },
       {
-        id: 'kn_buildings',
+        id: 'parcels',
         type: 'fill',
         source: 'tegola',
-        'source-layer': 'kn_buildings',
+        'source-layer': 'parcels',
         paint: {
-          'fill-color': '#0786e0',
+          'fill-color': '#f03805',
           'fill-opacity': 0.8
         },
         minzoom: 0,
         maxzoom: 24
       },
-      {
-        id: 'kn_stations',
-        type: 'fill',
-        source: 'tegola',
-        'source-layer': 'kn_stations',
-        paint: {
-          'fill-color': '#b707ed',
-          'fill-opacity': 0.9
-        },
-        minzoom: 0,
-        maxzoom: 24
-      },	  
-	  
 	{
-	  id: 'kn_bld_entrance',
+	  id: 'landvaluesubzone',
 	  type: 'circle',
 	  source: 'tegola',
-	  'source-layer': 'kn_bld_entrance',
+	  'source-layer': 'landvaluesubzone',
 	  paint: {
 		'circle-radius': 5,
 		'circle-color': '#0ecb81',
@@ -132,28 +145,31 @@ const map = new maplibregl.Map({
 	}	  
     ]
   },
-  center: [127.0276, 37.4979],
-  zoom: 13
+  center: [102.6090, 17.9600],
+  zoom: 6
 });
 
 // Toggle layers
-document.getElementById('toggle-intervals').addEventListener('change', function() {
+document.getElementById('toggle-roads').addEventListener('change', function() {
   const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('kn_intervals', 'visibility', visibility);
+  map.setLayoutProperty('roads', 'visibility', visibility);
 });
 
-document.getElementById('toggle-buildings').addEventListener('change', function() {
+document.getElementById('toggle-parcels').addEventListener('change', function() {
   const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('kn_buildings', 'visibility', visibility);
+  map.setLayoutProperty('parcels', 'visibility', visibility);
 });
 
-document.getElementById('toggle-stations').addEventListener('change', function() {
-  const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('kn_stations', 'visibility', visibility);
+document.getElementById('toggle-provinces').addEventListener('change', function() {
+map.setLayoutProperty('provinces', 'visibility', this.checked ? 'visible' : 'none');
 });
 
-document.getElementById('toggle-entrances').addEventListener('change', function() {
-map.setLayoutProperty('kn_bld_entrance', 'visibility', this.checked ? 'visible' : 'none');
+document.getElementById('toggle-districts').addEventListener('change', function() {
+map.setLayoutProperty('districts', 'visibility', this.checked ? 'visible' : 'none');
+});
+
+document.getElementById('toggle-landvaluesubzone').addEventListener('change', function() {
+map.setLayoutProperty('landvaluesubzone', 'visibility', this.checked ? 'visible' : 'none');
 });
 
 // Update zoom level display
