update html example for two regions

--- a/map_test/keangnam.html
+++ b/map_test/keangnam.html
@@ -67,7 +67,7 @@ const map = new maplibregl.Map({
       },
       tegola: {
         type: 'vector',
-        tiles: ['http://www.sntglobal.net:8680/maps/default/{z}/{x}/{y}.vector.pbf'],
+        tiles: ['http://www.sntglobal.net:8680/maps/keangnam/{z}/{x}/{y}.vector.pbf'],
         minzoom: 0,
         maxzoom: 20,
         attribution: '© Tegola'
