--- a/maplibre/keangnam.html
+++ b/maplibre/keangnam.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Keangnam Buildings</title>
-  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <script src="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.js"></script>
   <link href="https://unpkg.com/maplibre-gl@3.3.1/dist/maplibre-gl.css" rel="stylesheet" />
   <style>
@@ -38,131 +38,208 @@
   </style>
 </head>
 <body>
+  <div id="map"></div>
+  <div id="controls">
+    <label><input type="checkbox" id="toggle-intervals" checked> Roads</label><br>
+    <label><input type="checkbox" id="toggle-buildings" checked> Buildings</label><br>
+    <label><input type="checkbox" id="toggle-stations" checked> Stations</label><br>
+    <label><input type="checkbox" id="toggle-entrances" checked> Entrances</label>
+  </div>
+  <div id="zoom-level">Zoom: --</div>
 
-<div id="map"></div>
-<div id="controls">
-
-  <label><input type="checkbox" id="toggle-intervals" checked> Roads</label><br>
-  <label><input type="checkbox" id="toggle-buildings" checked> Buildings</label><br>
-  <label><input type="checkbox" id="toggle-stations" checked> Stations</label><br>
-  <label><input type="checkbox" id="toggle-entrances" checked> Entrances</label>
-</div>
-<div id="zoom-level">Zoom: --</div>
-
-<script>
-const map = new maplibregl.Map({
-  container: 'map',
-    // Add this option to ensure antialiasing is enabled
-  antialias: true,
-  style: {
-    version: 8,
-    sources: {
-      osm: {
-        type: 'raster',
-        tiles: [
-          'https://tile.openstreetmap.org/{z}/{x}/{y}.png'
-        ],
-        tileSize: 256,
-        attribution: '© OpenStreetMap contributors'
+  <script>
+    const map = new maplibregl.Map({
+      container: 'map',
+      antialias: true,
+      style: {
+        version: 8,
+        sources: {
+          osm: {
+            type: 'raster',
+            tiles: ['https://tile.openstreetmap.org/{z}/{x}/{y}.png'],
+            tileSize: 256,
+            attribution: '© OpenStreetMap contributors'
+          },
+          tegola: {
+            type: 'vector',
+            tiles: ['http://www.sntglobal.net:8680/maps/keangnam/{z}/{x}/{y}.vector.pbf'],
+            minzoom: 0,
+            maxzoom: 20,
+            attribution: '© Tegola'
+          }
+        },
+        layers: [
+          { id: 'osm', type: 'raster', source: 'osm', minzoom: 0, maxzoom: 24 },
+          {
+            id: 'kn_intervals',
+            type: 'line',
+            source: 'tegola',
+            'source-layer': 'kn_intervals',
+            paint: { 'line-color': '#ff0000', 'line-width': 2 }
+          },
+          {
+            id: 'kn_buildings',
+            type: 'fill',
+            source: 'tegola',
+            'source-layer': 'kn_buildings',
+            paint: { 'fill-color': '#0786e0', 'fill-opacity': 0.8 },
+            minzoom: 0,
+            maxzoom: 24
+          },
+          {
+            id: 'kn_stations',
+            type: 'fill',
+            source: 'tegola',
+            'source-layer': 'kn_stations',
+            paint: { 'fill-color': '#b707ed', 'fill-opacity': 0.9 },
+            minzoom: 0,
+            maxzoom: 24
+          },
+          {
+            id: 'kn_bld_entrance',
+            type: 'circle',
+            source: 'tegola',
+            'source-layer': 'kn_bld_entrance',
+            paint: {
+              'circle-radius': 5,
+              'circle-color': '#fc3f6e',
+              'circle-stroke-color': '#dbcd07',
+              'circle-stroke-width': 1
+            },
+            minzoom: 0,
+            maxzoom: 24
+          }
+        ]
       },
-      tegola: {
-        type: 'vector',
-        tiles: ['http://www.sntglobal.net:8680/maps/keangnam/{z}/{x}/{y}.vector.pbf'],
-        minzoom: 0,
-        maxzoom: 20,
-        attribution: '© Tegola'
-      }
-    },
-    layers: [
-      {
-        id: 'osm',
-        type: 'raster',
-        source: 'osm',
-        minzoom: 0,
-        maxzoom: 24
-      },
-      {
-        id: 'kn_intervals',
+      center: [127.0276, 37.4979],
+      zoom: 12
+    });
+
+    map.on('load', () => {
+      map.addSource('highlight-source', {
+        type: 'geojson',
+        data: { type: 'FeatureCollection', features: [] }
+      });
+
+      // Polygon highlight with outline and antialias to reduce seams
+      map.addLayer({
+        id: 'feature-highlight-fill',
+        type: 'fill',
+        source: 'highlight-source',
+        paint: {
+          'fill-color': '#ffff00',
+          'fill-opacity': 1,  // important!!! to not see the tile boundaries
+          'fill-antialias': true
+        },
+        layout: { visibility: 'none' }
+      });
+
+      // Line-only highlight for lines
+      map.addLayer({
+        id: 'feature-highlight-lineOnly',
         type: 'line',
-        source: 'tegola',
-        'source-layer': 'kn_intervals',
+        source: 'highlight-source',
         paint: {
-          'line-color': '#ff0000',
-          'line-width': 2
-        }
-      },
-      {
-        id: 'kn_buildings',
-        type: 'fill',
-        source: 'tegola',
-        'source-layer': 'kn_buildings',
-        paint: {
-          'fill-color': '#0786e0',
-          'fill-opacity': 0.8
+          'line-color': '#ffff00',
+          'line-width': 5
         },
-        minzoom: 0,
-        maxzoom: 24
-      },
-      {
-        id: 'kn_stations',
-        type: 'fill',
-        source: 'tegola',
-        'source-layer': 'kn_stations',
+        layout: { visibility: 'none' }
+      });
+
+      // Circle highlight for points
+      map.addLayer({
+        id: 'feature-highlight-circle',
+        type: 'circle',
+        source: 'highlight-source',
         paint: {
-          'fill-color': '#b707ed',
-          'fill-opacity': 0.9
+          'circle-radius': 10,
+          'circle-color': '#ffff00',
+          'circle-stroke-color': '#ff9900',
+          'circle-stroke-width': 3
         },
-        minzoom: 0,
-        maxzoom: 24
-      },	  
-	  
-	{
-	  id: 'kn_bld_entrance',
-	  type: 'circle',
-	  source: 'tegola',
-	  'source-layer': 'kn_bld_entrance',
-	  paint: {
-		'circle-radius': 5,
-		'circle-color': '#fc3f6e',
-		'circle-stroke-color': '#dbcd07',
-		'circle-stroke-width': 1
-	  },
-	  minzoom: 0,
-	  maxzoom: 24
-	}	  
-    ]
-  },
-  center: [127.0276, 37.4979],
-  zoom: 12
-});
+        layout: { visibility: 'none' }
+      });
+    });
 
-// Toggle layers
-document.getElementById('toggle-intervals').addEventListener('change', function() {
-  const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('kn_intervals', 'visibility', visibility);
-});
+    function setHighlight(type) {
+      const layers = [
+        'feature-highlight-fill',
+        'feature-highlight-lineOnly',
+        'feature-highlight-circle'
+      ];
+      layers.forEach(id =>
+        map.setLayoutProperty(id, 'visibility', 'none')
+      );
 
-document.getElementById('toggle-buildings').addEventListener('change', function() {
-  const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('kn_buildings', 'visibility', visibility);
-});
+      if (type === 'Polygon' || type === 'MultiPolygon') {
+        map.setLayoutProperty('feature-highlight-fill', 'visibility', 'visible');
+      } else if (type === 'LineString' || type === 'MultiLineString') {
+        map.setLayoutProperty('feature-highlight-lineOnly', 'visibility', 'visible');
+      } else if (type === 'Point' || type === 'MultiPoint') {
+        map.setLayoutProperty('feature-highlight-circle', 'visibility', 'visible');
+      }
+    }
 
-document.getElementById('toggle-stations').addEventListener('change', function() {
-  const visibility = this.checked ? 'visible' : 'none';
-  map.setLayoutProperty('kn_stations', 'visibility', visibility);
-});
+    // Layer toggles
+    document.getElementById('toggle-intervals').onchange = e =>
+      map.setLayoutProperty('kn_intervals', 'visibility', e.target.checked ? 'visible' : 'none');
 
-document.getElementById('toggle-entrances').addEventListener('change', function() {
-map.setLayoutProperty('kn_bld_entrance', 'visibility', this.checked ? 'visible' : 'none');
-});
+    document.getElementById('toggle-buildings').onchange = e =>
+      map.setLayoutProperty('kn_buildings', 'visibility', e.target.checked ? 'visible' : 'none');
 
-// Update zoom level display
-function updateZoomDisplay() {
-  const zoom = map.getZoom().toFixed(2);
-  document.getElementById('zoom-level').innerText = `Zoom: ${zoom}`;
-}
-map.on('zoom', updateZoomDisplay);
-map.on('load', updateZoomDisplay);
-</script>
+    document.getElementById('toggle-stations').onchange = e =>
+      map.setLayoutProperty('kn_stations', 'visibility', e.target.checked ? 'visible' : 'none');
+
+    document.getElementById('toggle-entrances').onchange = e =>
+      map.setLayoutProperty('kn_bld_entrance', 'visibility', e.target.checked ? 'visible' : 'none');
+
+    // Zoom level display
+    function updateZoomDisplay() {
+      document.getElementById('zoom-level').innerText = `Zoom: ${map.getZoom().toFixed(2)}`;
+    }
+    map.on('zoom', updateZoomDisplay);
+    map.on('load', updateZoomDisplay);
+
+    const popup = new maplibregl.Popup({ closeButton: true, closeOnClick: true });
+
+    map.on('click', e => {
+      const features = map.queryRenderedFeatures(e.point, {
+        layers: ['kn_intervals', 'kn_buildings', 'kn_stations', 'kn_bld_entrance']
+      });
+
+      if (!features.length) {
+        popup.remove();
+        map.getSource('highlight-source').setData({ type: 'FeatureCollection', features: [] });
+        setHighlight(null);
+        return;
+      }
+
+      const feature = features[0];
+      const fullFeatures = map.querySourceFeatures('tegola', {
+        sourceLayer: feature.layer['source-layer'],
+        filter: ['==', 'id', feature.properties.id]
+      });
+
+      const highlightFeatures = fullFeatures.length ? fullFeatures : [feature];
+      map.getSource('highlight-source').setData({
+        type: 'FeatureCollection',
+        features: highlightFeatures
+      });
+
+      setHighlight(feature.geometry.type);
+
+      let html = `<strong>Feature type: ${feature.layer.id}</strong><br><table>`;
+      for (const key in feature.properties) {
+        html += `<tr><td><strong>${key}</strong></td><td>${feature.properties[key]}</td></tr>`;
+      }
+      html += '</table>';
+      popup.setLngLat(e.lngLat).setHTML(html).addTo(map);
+    });
+
+    ['kn_intervals', 'kn_buildings', 'kn_stations', 'kn_bld_entrance'].forEach(layer => {
+      map.on('mouseenter', layer, () => (map.getCanvas().style.cursor = 'pointer'));
+      map.on('mouseleave', layer, () => (map.getCanvas().style.cursor = ''));
+    });
+  </script>
 </body>
 </html>
